fix(burger): position on small width

--- a/styles/scss/partials/_navbar.scss
+++ b/styles/scss/partials/_navbar.scss
@@ -30,6 +30,9 @@
 
   @media( max-width:991px){
     flex-wrap: nowrap;
+    .navbar-toggler {
+      order: -1;
+    }
   }
 }
 
